--- a/drivers/misc/mediatek/fpsgo_cus/Kbuild
+++ b/drivers/misc/mediatek/fpsgo_cus/Kbuild
@@ -50,32 +50,8 @@ ccflags-y += \
 
 obj-m += fpsgo.o
 fpsgo-y += src/fpsgo_main.o
-
-ifeq (y,$(CONFIG_MTK_FPSGO_V3))
-	ifeq ($(KERNEL_DIR), kernel-5.10)
-		fpsgo-y += src/xgf_v3_ko_quark_32.o
-	else
-		ifeq (y,$(CONFIG_THUMB2_KERNEL))
-			fpsgo-y += src/xgf_v3_ko_thumb2.o
-		else
-			fpsgo-$(CONFIG_ARM) += src/xgf_v3_ko_arm32.o
-			ifeq (y,$(CONFIG_CFI_CLANG))
-				ifeq (y,$(CONFIG_CFI_PERMISSIVE))
-					fpsgo-$(CONFIG_ARM64) += src/xgf_v3_ko_arm64_cfi_d.o
-				else
-					fpsgo-$(CONFIG_ARM64) += src/xgf_v3_ko_arm64_cfi.o
-				endif
-			else
-				fpsgo-$(CONFIG_ARM64) += src/xgf_v3_ko_arm64.o
-			endif
-		endif
-	endif
+ifeq ($(CONFIG_CFI_CLANG),y)
+  fpsgo-objs += src/xgf_v3_ko_arm64_cfi.o
 else
-	ifeq (m,$(CONFIG_MTK_FPSGO_V3))
-		ifeq (y,$(CONFIG_ARM))
-			fpsgo-y += src/xgf_v3_ko_quark_32.o
-		else
-			fpsgo-y += src/xgf_v3_ko_quark.o
-		endif
-	endif
+  fpsgo-objs += src/xgf_v3_ko_arm64.o
 endif
