touchscreen: Don't build focaltech by default
Signed-off-by: electimon <electimon@gmail.com>

--- a/drivers/input/touchscreen/focaltech_ft8057s_v4_1/Kconfig
+++ b/drivers/input/touchscreen/focaltech_ft8057s_v4_1/Kconfig
@@ -4,7 +4,7 @@
 
 config TOUCHSCREEN_FTS_8057S
     tristate "Focaltech Touchscreen"
-    default m
+    default n
     help
       Say Y here if you have Focaltech touch panel.
       If unsure, say N.
